Adapt about page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,8 +30,8 @@ h1.page-title a {
 	/*border-bottom: 0.1em solid #FE2900;*/
 }
 .menu, .article-meta, footer { text-align: center; }
-.title { font-size: 1.1em; }
-p.subtitle { 
+.title { font-size: 1em; line-height: 1em;}
+.subtitle { 
 	margin: 0;
 	padding: 0;
 	font-size: 1em;
