Change colors of blog theme

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,26 @@
+head {
+  border-bottom: 5px solid #FFF8C8; 
+}
+
 body {
   max-width: 600px;
   margin: auto;
   padding: 1em;
   line-height: 1.4em;
+  background: #f9f9f9;
 }
-a {color: #2B00F7;}
+a {color: #EF3737 /*#2B00F7*/;}
+
+a.list {color: #3358D5; text-decoration: none;}
 
 /* header and footer areas */
 .menu { margin: 0.6em 0; padding: 0; display: inline-block; }
 .menu li { 
 	display: inline-block; 
 	padding-right: 1.2em;
+}
+.menu li a {
+  color: #3358D5;
 }
 .article-meta, .menu a {
   text-decoration: none;
@@ -31,6 +41,7 @@ h1.page-title a {
 	/*border-bottom: 0.1em solid #FE2900;*/
 }
 .article-meta, footer { text-align: center; }
+
 .title { font-size: 1em; line-height: 1em;}
 .subtitle { 
 	margin: 0;
@@ -39,17 +50,17 @@ h1.page-title a {
 	display: inline-block; 
 }
 
-footer a { text-decoration: none; }
+footer a { text-decoration: none; color: #3358D5;}
 hr {
   border-style: dashed;
-  color: #FE2900;
+  color: #EF3737 /*#FE2900*/;
   margin: 0.6em 0;
 }
 
 /* code */
 pre {
-  border: 1px solid #ddd;
-  box-shadow: 5px 5px 5px #eee;
+  border: 1px solid #000;
+  box-shadow: 5px 5px 5px #000;
   padding: 1em;
   overflow-x: auto;
 }
@@ -60,8 +71,11 @@ pre code { background: none; }
 img, iframe, video { max-width: 100%; }
 main { hyphens: auto; }
 blockquote {
-  background: #f9f9f9;
-  border-left: 5px solid #ccc;
+  background: #fff; /*#f9f9f9;*/
+  border-left: 5px solid #6085FF;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   padding: 3px 1em 3px;
 }
 
@@ -77,7 +91,8 @@ thead, tfoot, tr:nth-child(even) { background: #eee }
 pre {
     border: 1px solid #ddd;
     box-shadow: 5px 5px 5px #eee;
- 	background: #f8f8f8;
+ 	  background: #fff /*#f8f8f8*/;
+ 	  color: #000;
     padding: 1em;
     overflow-x: auto;
   }
