--- a/themes/hugo-xmin/static/css/style.css
+++ b/themes/hugo-xmin/static/css/style.css
@@ -3,6 +3,7 @@ body {
   margin: auto;
   padding: 1em;
   line-height: 1.5em;
+  background-color: #F9F9F9;
 }
 
 /* header and footer areas */
@@ -10,7 +11,7 @@ body {
 .menu li { display: inline-block; }
 .article-meta, .menu a {
   text-decoration: none;
-  background: #eee;
+  background: #F9F9F9; /*#eee;*/
   padding: 5px;
   border-radius: 5px;
 }
