--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,11 +72,13 @@ a {color: #EF3737 /*#2B00F7*/;}
           main { hyphens: auto; }
           blockquote {
             background: #fff; /*#f9f9f9;*/
-              border-left: 5px solid #6085FF;
+            border-left: 5px solid #6085FF;
             border-top: 1px solid #ddd;
             border-bottom: 1px solid #ddd;
             border-right: 1px solid #ddd;
             padding: 3px 1em 3px;
+            margin-left: 0.5em;
+            margin-right: 1em;
           }
           
           table {
