--- a/themes/hugo-xmin/layouts/_default/single.html
+++ b/themes/hugo-xmin/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 <div class="article-meta">
 <h1><span class="title">{{ .Title }}</span></h1>
-{{ if .Params.date }}<h2 class="date">{{ .Date.Format "2006/01/02" }}</h2>{{ end }}
+{{ if .Params.date }}<h2 class="date">{{ .Date.Format "January 2, 2006" }}</h2>{{ end }}
 </div>
 
 <main>
