--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,11 @@ body {
   padding: 1em;
   line-height: 1.4em;
   background: #f9f9f9;
+  
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
 }
 a {color: #EF3737 /*#2B00F7*/;}
     
@@ -28,12 +33,14 @@ a.list {color: #3358D5; text-decoration: none;}
           padding: 0px;
         border-radius: 5px;*/
       }
+      
       h1.page-title { 
         display: inline-block; 
         padding-right: 0.6em;
         padding-bottom: 0;
         margin-bottom: 0;
       }
+      
       h1.page-title a {
         text-decoration: none;
         color: #000;
