--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ .Title }} | {{ .Site.Title }}</title>
-    <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
-    <link rel="stylesheet" href="{{ "/css/fonts.css" | relURL }}" />
-    {{ partial "head_custom.html" . }}
-  </head>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>{{ .Site.Title }} - {{ .Title }}</title>
+<link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
+  {{ partial "head_custom.html" . }}
+</head>
 
-  <body>
-    <nav>
-    <h1 class="page-title"><a href="/">Tim Radtke</a></h1>
-    <p class ="subtitle">Winners minimize regret</p>
-    <ul class="menu">
+<div class="container">
+<header role="banner">
+<nav role="navigation">
+<a href="/" class="logo"><h1>Tim Radtke</h1></a> <span>Winners minimize regret.</span>
+<ul class="menu">
       {{ range .Site.Menus.main }}
       <li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
       {{ end }}
-    </ul>
-    
-    <hr/>
-    </nav>
+</ul>
+</nav>
+</header>
+
+<hr/>
