Add blogroll link to footer

--- a/themes/hugo-xmin/layouts/partials/footer.html
+++ b/themes/hugo-xmin/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 <a href="mailto:tim@timradtke.net?subject=Hi%20from%20minimizeregret.com">Contact</a> -
 <a href="https://twitter.com/timradtke">Twitter</a> -
 <a href="https://github.com/timradtke">Github</a> -
-<a href="/feed.xml">RSS</a><br>
+<a href="/blogroll">Blogroll</a><br>
 &copy; 2015–2020 Tim Radtke
 </footer>
 </div>
