--- a/themes/hugo-xmin/layouts/_default/list.html
+++ b/themes/hugo-xmin/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 
 {{if not .IsHome }}
-<h1>{{ .Title }}</h1>
+<h1>{{ .Title | markdownify }}</h1>
 {{ end }}
 
 {{ .Content }}
@@ -16,11 +16,23 @@ main ul span { color:slategray;width:5.5em;margin-left:-5.5em;display:inline-blo
 </style>
 
 <ul>
-  {{ range (where .Data.Pages "Section" "!=" "") }}
-  <li>
-    <span>{{ .Date.Format "2006/01/02" }}</span>
-    <a href="{{ .URL }}">{{ .Title }}</a>
-  </li>
+  {{ $pages := .Pages }}
+  {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
+    {{ range (where $pages "Section" "!=" "") }}
+    <li>
+      <span class="date">{{ .Date.Format "2006/01/02" }}</span>
+      <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
+    </li>
+    {{ if eq .Dir "note/" }}
+      <p>{{ .Content | safeHTML }}</p>
+    {{ end }}
+    {{ if eq .Dir "post/" }}
+      <p>{{ .Summary }}</p>
+      {{ if .Truncated }}
+        <p><a href="{{ .RelPermalink | relURL }}">Continue reading?</a></p>
+      {{ end }}
+    {{ end }}
+    <hr>
   {{ end }}
 </ul>
 
