--- a/themes/hugo-xmin/layouts/partials/footer.html
+++ b/themes/hugo-xmin/layouts/partials/footer.html
@@ -1,11 +1,9 @@
 <footer role="contentinfo">
 {{ partial "foot_custom.html" . }}
-<hr/>
 <a href="#">Back to top</a> -
 <a href="mailto:tim@timradtke.net?subject=Hi%20from%20minimizeregret.com">Contact</a> -
 <a href="https://twitter.com/timradtke">Twitter</a> -
-<a href="https://github.com/timradtke">Github</a> -
-<a href="/blogroll">Blogroll</a><br>
+<a href="https://github.com/timradtke">Github</a><br>
 &copy; 2015–2020 Tim Radtke
 </footer>
 </div>
